Add images and start on content
Added a folder for images and placed several
icons in it. Credits for each added to the
readme file. Also began adding a few div's
to the html.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
         <div class="container">
-                <div class="header"></div>
+                <div class="header">
+                        <div>
+                                <label for="search"></label>
+                                <input type="text" id="search" name="search">
+                        </div>
+                </div>
                 <div class="sidebar"></div>
                 <div class="main"></div>
         </div>
