Get cards arranged
Cards are now arranged correctly. Will work on the last
two cards for 'trending' and 'announcements' before adding
fonts and finishing up the rest. kinda...

--- a/index.html
+++ b/index.html
@@ -53,7 +53,65 @@
                                 <li>Privacy</li>
                         </ul>
                 </div>
-                <div class="main"></div>
+                <div class="main">
+                        <div class="projects">
+                                <div class="label">Open Projects</div>
+                                <div class="card">
+                                        <p class="title">Item</p>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <div class="icon share"><img src="./images/share.png" alt="Share"></div>
+                                </div>
+                                <div class="card">
+                                        <p class="title">Item</p>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <div class="icon share"><img src="./images/share.png" alt="Share"></div>
+                                </div>
+                                <div class="card">
+                                        <p class="title">Item</p>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <div class="icon share"><img src="./images/share.png" alt="Share"></div>
+                                </div>
+                                <div class="card">
+                                        <p class="title">Item</p>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <div class="icon share"><img src="./images/share.png" alt="Share"></div>
+                                </div>
+                                <div class="card">
+                                        <p class="title">Item</p>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <div class="icon share"><img src="./images/share.png" alt="Share"></div>
+                                </div>
+                                <div class="card">
+                                        <p class="title">Item</p>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <div class="icon share"><img src="./images/share.png" alt="Share"></div>
+                                </div>
+                        </div>
+                        <div class="announcements container">
+                                <div class="label">Announcements</div>
+                                <div class="announcements content">
+
+                                </div>
+                        </div>
+                        <div class="trending container">
+                                <div class="label">Trending</div>
+                                <div class="trending content">
+
+                                </div>
+                        </div>
+                </div>
         </div>
 </body>
 </html>
