Add new fonts and style
Downloaded some new fonts. And then added
some style to make it work. Now working on
the sidebar.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
         <title>Admin Dashboard</title>
         <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
         <div class="big container">
                 <div class="header">
@@ -58,60 +60,99 @@
                                 <div class="label">Open Projects</div>
                                 <div class="card">
                                         <p class="title">Item</p>
-                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
-                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
-                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark">
+                                        </div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark">
+                                        </div>
                                         <div class="icon share"><img src="./images/share.png" alt="Share"></div>
                                 </div>
                                 <div class="card">
                                         <p class="title">Item</p>
-                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
-                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
-                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark">
+                                        </div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark">
+                                        </div>
                                         <div class="icon share"><img src="./images/share.png" alt="Share"></div>
                                 </div>
                                 <div class="card">
                                         <p class="title">Item</p>
-                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
-                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
-                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark">
+                                        </div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark">
+                                        </div>
                                         <div class="icon share"><img src="./images/share.png" alt="Share"></div>
                                 </div>
                                 <div class="card">
                                         <p class="title">Item</p>
-                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
-                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
-                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark">
+                                        </div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark">
+                                        </div>
                                         <div class="icon share"><img src="./images/share.png" alt="Share"></div>
                                 </div>
                                 <div class="card">
                                         <p class="title">Item</p>
-                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
-                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
-                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark">
+                                        </div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark">
+                                        </div>
                                         <div class="icon share"><img src="./images/share.png" alt="Share"></div>
                                 </div>
                                 <div class="card">
                                         <p class="title">Item</p>
-                                        <p>Depending conveying direction has led immediate. Law gate her well bed life feet seen rent.</p>
-                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark"></div>
-                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark"></div>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <div class="icon checkmark"><img src="./images/check-mark.png" alt="Checkmark">
+                                        </div>
+                                        <div class="icon bookmark"><img src="./images/bookmark.png" alt="Bookmark">
+                                        </div>
                                         <div class="icon share"><img src="./images/share.png" alt="Share"></div>
                                 </div>
                         </div>
                         <div class="announcements container">
                                 <div class="label">Announcements</div>
                                 <div class="announcements content">
-
+                                        <h5>Community Share Day</h5>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <hr>
+                                        <h5>Site Maintenance</h5>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <hr>
+                                        <h5>Updated Privacy Policy</h5>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
                                 </div>
                         </div>
                         <div class="trending container">
                                 <div class="label">Trending</div>
                                 <div class="trending content">
-
+                                        <h5>Community Share Day</h5>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <hr>
+                                        <h5>Site Maintenance</h5>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>
+                                        <hr>
+                                        <h5>Updated Privacy Policy</h5>
+                                        <p>Depending conveying direction has led immediate. Law gate her well bed life
+                                                feet seen rent.</p>          
                                 </div>
                         </div>
                 </div>
         </div>
 </body>
+
 </html>
