--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                                 <div class="logo small">
                                         <img src="./images/tree.png" alt="Tree logo">
                                 </div>
-                                <div>Jimothy Jenkins</div>
+                                <div class="jimothy">Jimothy Jenkins</div>
                         </div>
                         <div class="user-info">
                                 <div class="logo"><img src="./images/tree.png" alt="Tree Logo"></div>
-                                <div class="user-greeting"><span>Hi there,</span><br>Jimothy Jenkins</div>
+                                <div class="user-greeting"><span>Hey there,</span><br>Jimothy Jenkins</div>
                         </div>
                         <div class="nav">
                                 <button class="new">New</button>
